Project aTalk-Android Release Notes
=========================================================================
Version:        4.0.x (400000)
Release Date:   11/01/2023
Author:         cmeng
- Move project name space to org.atalk.hmos
- Change minimum API support to 24 (android-7)
- Migrate ice4j to only compatible with API-24

=========================================================================
Version:        3.2.1 (302010)
Release Date:   07/03/2023
Author:         cmeng
- Add JNI native library support for audio codec G729.1 using BCG729 source from:
  * see https://www.rfc-editor.org/rfc/rfc5459.html & https://datatracker.ietf.org/doc/html/rfc4749
  * https://gitlab.linphone.org/BC/public/bcg729/-/archive/release/1.1.1/bcg729-1.1.1.tar.gz
  * Bcg729 is an opensource implementation of both encoder and decoder of the ITU G729 Annex A/B speech codec.
- Replace G729 Java Codec with JNI Codec BCG729, supporting voice activity detection (VAD) and discontinuous transmission (DTX).
- Fix incorrect g722 codecs entries in FMJPluginConfiguration settings, should be:
  * "org.atalk.impl.neomedia.codec.audio.g722.JNIDecoder",
  * "org.atalk.impl.neomedia.codec.audio.g722.JNIEncoder",
- Jingle.Group.Content element does not contains attribute 'creator';
  remove null check for this attribute in JingleContent.build()
- Add support to handle embedded Transport-info in the session-accept of pidgin, before process Jingle SessionAccept.
- Interchange the call receive popup message buttons locations between 'Dismiss' and 'Answer'.
- For Conversations 2.12.2 dtls media call compatibility with aTalk; use RSA 'TLS Certificate Signature Algorithm' only e.g. "SHA256withRSA"
  webrtc-113.0.0 does not support certificate with ECDSA SignatureAndHashAlgorithm.
- aTalk to aTalk support certificates with ECDSA or RSA; select ECDSA for better secure DTLS encryption call e.g. "SHA256withECDSA".