@@ -1,155 +1,0 @@
-<?xml version="1.0" encoding="utf-8"?>
-
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/call_background"
-    android:keepScreenOn="true">
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_above="@+id/button_Container">
-
-        <LinearLayout
-            android:id="@+id/callInfoGroup"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/calleeAvatar"
-                android:layout_width="@dimen/avatar_height"
-                android:layout_height="@dimen/avatar_height"
-                android:layout_gravity="center_horizontal"
-                android:contentDescription="@string/service_gui_CALL"
-                android:paddingBottom="@dimen/between_padding"
-                android:scaleType="fitXY"
-                android:src="@drawable/person_photo" />
-
-            <RelativeLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/between_padding"
-                android:background="@drawable/call_status_bg"
-                android:gravity="center_vertical"
-                android:padding="10dp">
-
-                <TextView
-                    android:id="@+id/callStatus"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:gravity="center_vertical"
-                    android:text="@string/service_gui_DISCONNECTED_STATUS"
-                    android:textColor="@color/textColorWhite"
-                    android:textSize="@dimen/label_text_size" />
-
-                <TextView
-                    android:id="@+id/callTime"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="5dp"
-                    android:layout_toEndOf="@+id/callStatus"
-                    android:text="00:00:00"
-                    android:textColor="@color/textColorWhite"
-                    android:textSize="@dimen/label_text_size" />
-            </RelativeLayout>
-
-            <TextView
-                android:id="@+id/callErrorReason"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginLeft="10dp"
-                android:layout_marginRight="10dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/call_status_bg"
-                android:gravity="center_vertical"
-                android:padding="5dp"
-                android:text="Some very long call ended reason description"
-                android:textColor="@color/textColorWhite"
-                android:textSize="@dimen/label_text_size"
-                android:visibility="visible" />
-        </LinearLayout>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:id="@+id/button_Container"
-        android:layout_width="fill_parent"
-        android:layout_height="60dp"
-        android:layout_alignParentBottom="true"
-        android:background="#40000000"
-        android:orientation="horizontal">
-
-        <ImageButton
-            android:id="@+id/button_call_back_to_chat"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/image_button_background"
-            android:contentDescription="@string/gui_call_hold"
-            android:focusable="true"
-            android:src="@drawable/call_back_to_chat_dark" />
-
-        <ImageButton
-            android:id="@+id/button_speakerphone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/image_button_background"
-            android:contentDescription="@string/service_gui_VOLUME_CONTROL_TOOL_TIP"
-            android:src="@drawable/call_receiver_on_dark" />
-
-        <ImageButton
-            android:id="@+id/button_call_microphone"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/image_button_background"
-            android:contentDescription="@string/service_gui_MUTE_BUTTON_TOOL_TIP"
-            android:src="@drawable/call_microphone_mute_dark" />
-
-        <ImageButton
-            android:id="@+id/button_call_video"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/image_button_background"
-            android:contentDescription="@string/service_gui_LOCAL_VIDEO_BUTTON_TOOL_TIP"
-            android:src="@drawable/call_video_dark" />
-
-        <ImageButton
-            android:id="@+id/button_call_hold"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/image_button_background"
-            android:contentDescription="@string/gui_call_hold"
-            android:src="@drawable/call_hold_on_dark" />
-
-        <ImageButton
-            android:id="@+id/button_call_hangup"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
-            android:layout_gravity="center"
-            android:layout_weight="1"
-            android:background="@drawable/image_button_background"
-            android:contentDescription="@string/gui_call_hang_up"
-            android:src="@drawable/call_hangup" />
-    </LinearLayout>
-</RelativeLayout>
