@@ -102,6 +102,22 @@
                     android:textColor="@color/textColorWhite"
                     android:textSize="@dimen/label_text_size" />
             </RelativeLayout>
+
+            <TextView
+                android:id="@+id/callEndReason"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
+                android:background="@drawable/call_status_bg"
+                android:gravity="center_vertical"
+                android:padding="5dp"
+                android:text="call ended reason description"
+                android:textColor="@color/textColorWhite"
+                android:textSize="@dimen/label_text_size"
+                android:visibility="visible" />
         </LinearLayout>
 
         <include
