@@ -1,8 +1,12 @@
 Project aTalk-Android Release Notes
 =========================================================================
 Version:        4.0.x (400000)
-Release Date:   11/01/2023
+Release Date:   11/02/2023
 Author:         cmeng
+- Merged CallEnded class with VideoCallActivity
+- Auto return to contactList 3 seconds after call has ended.
+
+/* === 11/01/2023 === */
 - Move project name space to org.atalk.hmos
 - Change minimum API support to 24 (android-7)
 - Migrate ice4j to only compatible with API-24
